--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "webpack": "^4.32.2"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --watch"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -17,6 +17,19 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
+    },
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/*"
+    ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "babel-jest": "^24.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "sinon": "^7.3.2",
+    "webpack-dev-server": "^3.5.1"
   }
 }
